--- a/Day7/Index.html
+++ b/Day7/Index.html
@@ -41,6 +41,7 @@
         <input type="submit" value="Submit">
     </form>
 
+    <!-- Javascript -->
     <script>
         document.getElementById("sampleForm").addEventListener("submit", function (event) {
             event.preventDefault();
