Personal information form

--- a/Day8/index.html
+++ b/Day8/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Another Form</title>
+    <title>Personal information</title>
 </head>
 <body >
     <h1><u>Personal information</u></h1>
