--- a/Dayp9/CreateNavigation.html
+++ b/Dayp9/CreateNavigation.html
@@ -1,15 +1,14 @@
+<!-- Create a navigation bar with links: -->
 <!DOCTYPE html>
 <html>
 <head>
     <title>Navigation Bar</title>
     <style>
-        /* Style the navigation bar */
         .navbar {
             background-color: #333;
             overflow: hidden;
         }
 
-        /* Style the links inside the navigation bar */
         .navbar a {
             float: left;
             display: block;
@@ -19,7 +18,6 @@
             text-decoration: none;
         }
 
-        /* Change color on hover */
         .navbar a:hover {
             background-color: #ddd;
             color: black;
